--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'American drama'
+- GITenberg
 title: Yolanda of Cyprus
 url: http://www.gutenberg.org/ebooks/34004
